@@ -2,7 +2,6 @@ package com.github.bestheroz.demo.api.internal.code;
 
 import com.github.bestheroz.demo.repository.CodeRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.collections4.IterableUtils;
 import org.springframework.stereotype.Service;
@@ -14,10 +13,9 @@ public class CodeService {
 
   public List<CodeDTO> saveAll(final List<CodeDTO> payload) {
     return IterableUtils.toList(
-            this.codeRepository.saveAll(
-                payload.stream().map(CodeDTO::toCode).collect(Collectors.toList())))
+            this.codeRepository.saveAll(payload.stream().map(CodeDTO::toCode).toList()))
         .stream()
         .map(CodeDTO::new)
-        .collect(Collectors.toList());
+        .toList();
   }
 }
