@@ -10,7 +10,6 @@ import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import javax.validation.constraints.NotNull;
 import lombok.AccessLevel;
 import lombok.Data;
@@ -35,9 +34,7 @@ public class RoleMenuChildrenDTO {
             RoleAuthorityType.DELETE));
     if (NullUtils.isNotEmpty(menuChildrenDTO.getChildren())) {
       this.children.addAll(
-          menuChildrenDTO.getChildren().stream()
-              .map(RoleMenuChildrenDTO::new)
-              .collect(Collectors.toList()));
+          menuChildrenDTO.getChildren().stream().map(RoleMenuChildrenDTO::new).toList());
     }
   }
 
@@ -47,9 +44,7 @@ public class RoleMenuChildrenDTO {
     this.authoritiesJson.addAll(roleMenuMap.getAuthoritiesJson());
     if (NullUtils.isNotEmpty(roleMenuMap.getChildren())) {
       this.children.addAll(
-          roleMenuMap.getChildren().stream()
-              .map(RoleMenuChildrenDTO::new)
-              .collect(Collectors.toList()));
+          roleMenuMap.getChildren().stream().map(RoleMenuChildrenDTO::new).toList());
     }
   }
 
